Teste Configuration AppSettings Azure

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DefaultConnection"
+  },
+  "ApiUrl": "ApiUrl",
+  "Secrets": {
+    "JwtTokenSecret": "JwtTokenSecret",
+    "ApiKey": "ApiKey",
+    "PrivateKey": "PrivateKey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
